# llm-mlx-llama

./: LICENSE  README.md  llm_mlx_llama.py  pyproject.toml
tests/: test_mlx_llama.py
